opam-version: "1.2"
name: "maki"
version: "dev"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["jbuilder" "build"]
]
build-doc: [ make "doc" ]
build-test: [ make "test" ]
depends: [
    "jbuilder" {build}
    "result"
    "lwt"
    "base-unix"
    "bencode"
    "sha"
    "base-threads"
]
depopts: [
    "yojson"
]
tags: [ "incremental" "persistent" "memoization" ]
homepage: "https://github.com/c-cube/maki/"
doc: "http://cedeela.fr/~simon/software/maki/"
available: [ocaml-version >= "4.02.0"]
dev-repo: "https://github.com/c-cube/maki.git"
bug-reports: "https://github.com/c-cube/maki/issues/"
